TraceRecorder: Remove QEMU-only restriction for semihost support
Semihost stream ports are also usable on non‑QEMU targets.
Lift the QEMU‑specific limitation to allow broader semihost support.

Signed-off-by: Tahsin Mutlugun <Tahsin.Mutlugun@analog.com>

--- a/TraceRecorder/config/Kconfig
+++ b/TraceRecorder/config/Kconfig
@@ -84,7 +84,7 @@ config PERCEPIO_TRC_CFG_STREAM_PORT_STM32_USB_CDC
 config PERCEPIO_TRC_CFG_STREAM_PORT_ZEPHYR_SEMIHOST
 	bool "Semihost"
 	depends on PERCEPIO_TRC_CFG_RECORDER_RTOS_ZEPHYR && \
-	QEMU_TARGET && SEMIHOST
+	SEMIHOST
 
 endchoice
 
